kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-service
spec:
  selector:
    app: banking-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
