kubernetes/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-non-root
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: check-run-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Security Violation: Running as root is not allowed in SecureBank Pro!"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
